mostly done with mobile design, just need to fix text alignment a little bit

--- a/project-1-newsletter-sign-up-with-success-message-main/project-1-frontend-mentor/src/App.css
+++ b/project-1-newsletter-sign-up-with-success-message-main/project-1-frontend-mentor/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .subscribe-window {
-  background-color: #f1edf6;
+  background-color: white;
   width: 800px;
   height: 550px;
   display: flex;
@@ -33,7 +33,7 @@
 }
 
 .subscribe h1 {
-  font-size: 3rem;
+  font-size: 2.75rem;
   font-family: Roboto-Bold, sans-serif;
 }
 
